# outset

./: .gitignore  README.md  SPIKE.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: auto-update.md  spec-mode.md
scripts/: build-sidecar.mjs
sidecar/: package.json
sidecar/src/: index.ts  specPrompt.ts
spike/: package.json  tsconfig.json
spike/src/: parent.ts  spike.ts
src/: App.tsx  Markdown.tsx  UpdateBanner.tsx  VersionFooter.tsx  index.css  main.tsx  sdkToChatItems.ts  specParsers.ts  state.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
