[package]
name = "outset"
version = "0.0.1"
description = "Outset — spec-driven development with Claude"
authors = ["you"]
edition = "2021"

# Public library entry — main.rs and the mobile entry both call into this.
[lib]
name = "outset_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "macros", "time"] }

# libc is used on Unix to send signals to the process group so that killing a
# sidecar Node process also takes down the claude subprocess it spawned.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
